--- a/Oops-Android/app/src/main/res/values/colors.xml
+++ b/Oops-Android/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="Black_1C">#1C1C1C</color>
     <color name="Black_70">#707070</color>
     <color name="Black_33">#333333</color>
+    <color name="Black_87">#878585</color>
     <color name="Cursor_main">#33BDBDBD</color>
     <color name="Color_EA">#EAECF7</color>
     <!-- 투명 색상 -->
