Refactor: 회원가입 화면의 밑줄 정렬 변경
- 기본적으로 주어지는 EditText의 밑줄은 약간의 padding이 들어가 있음, 여백 수정 불가능
- 이에 따라 아래 이어지는 textview와의 왼쪽 정렬이 맞지 않음
- 따라서 underline을 삭제하고, 개별 view로 만들어서 관리함

--- a/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
@@ -62,13 +62,21 @@
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
                 android:imeOptions="actionDone"
-                android:backgroundTint="@color/Gray_300"
+                android:background="@null"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
                 android:paddingTop="20dp"
+                android:paddingStart="0dp"
                 android:paddingEnd="75dp"
-                android:paddingBottom="14dp"/>
+                android:paddingBottom="10dp"/>
+
+            <View
+                android:id="@+id/view_sign_up_nickname"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/Gray_300"
+                android:layout_gravity="bottom"/>
 
             <!-- 중복 확인 -->
             <TextView
