--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -88,14 +88,22 @@
                 android:textSize="18sp"
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
-                android:backgroundTint="@color/Gray_300"
+                android:background="@null"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
                 android:imeOptions="actionNext"
                 android:paddingTop="20dp"
+                android:paddingStart="0dp"
                 android:paddingEnd="75dp"
-                android:paddingBottom="14dp"/>
+                android:paddingBottom="10dp"/>
+
+            <View
+                android:id="@+id/view_sign_up_2_email"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/Gray_300"
+                android:layout_gravity="bottom"/>
 
             <!-- 중복 확인 -->
             <TextView
@@ -157,14 +165,22 @@
                 android:textSize="18sp"
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
-                android:backgroundTint="@color/Gray_300"
+                android:background="@null"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
                 android:imeOptions="actionNext"
                 android:paddingTop="20dp"
+                android:paddingStart="0dp"
                 android:paddingEnd="75dp"
-                android:paddingBottom="14dp"/>
+                android:paddingBottom="10dp"/>
+
+            <View
+                android:id="@+id/view_sign_up_2_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/Gray_300"
+                android:layout_gravity="bottom"/>
 
             <ImageButton
                 android:id="@+id/iBtn_sign_up_2_pwd_toggle"
@@ -216,14 +232,22 @@
                 android:textSize="18sp"
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
-                android:backgroundTint="@color/Gray_300"
+                android:background="@null"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
                 android:imeOptions="actionDone"
                 android:paddingTop="20dp"
+                android:paddingStart="0dp"
                 android:paddingEnd="75dp"
-                android:paddingBottom="14dp"/>
+                android:paddingBottom="10dp"/>
+
+            <View
+                android:id="@+id/view_sign_up_2_pwd_check"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/Gray_300"
+                android:layout_gravity="bottom"/>
 
             <ImageButton
                 android:id="@+id/iBtn_sign_up_2_pwd_check_toggle"
