Fix: 일정 화면의 EditText 밑줄, 정렬 변경 및 높이 고정
- 사용자가 delete 버튼을 클릭하면, 삭제 버튼이 나타나면서 EditText의 높이가 증가하는 문제 발생
-> 높이를 일정하게 고정
- EditText의 밑줄을 헤더 textview와 왼쪽 정렬이 안 맞는 문제 발생
-> edit_text_bg 파일을 만들어서 밑줄을 고정함. 대신, edittext focus에 따른 밑줄 굵기 설정 불가능

--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -156,14 +156,15 @@
                     android:id="@+id/iv_todo_delete"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_delete_35"/>
+                    android:src="@drawable/ic_delete_24"/>
             </LinearLayout>
 
             <!-- 오늘 할 일 입력 박스 -->
             <EditText
                 android:id="@+id/edt_todo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/todo_today_info"
@@ -173,7 +174,9 @@
                 android:typeface="normal"
                 android:maxLines="1"
                 android:maxLength="20"
-                android:backgroundTint="@color/Gray_300"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:background="@drawable/edit_text_bg"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:inputType="text"
