--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -251,6 +251,12 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_home_stuff"/>
 
+            <View
+                android:id="@+id/view_home"
+                android:layout_width="match_parent"
+                android:layout_height="112dp"
+                android:visibility="gone"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
