Fix: 닉네임 입력 글자 제한 개수 변경
- 기존 10자이하 -> 6자 이하로 기획이 변경됨에 따라 화면 및 로직도 함께 변경함

--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -59,6 +59,10 @@
             android:text="@string/signup_info_4"
             android:fontFamily="@font/pretendard_bold"
             android:textSize="30sp"
+            android:maxLines="2"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="22sp"
+            android:autoSizeMaxTextSize="30sp"
             android:textColor="@color/Black"
             android:lineSpacingExtra="9sp"
             android:layout_marginTop="9dp"/>
