Fix: 튜토리얼 화면의 이미지 파일 화질 변경
- 기존의 png 파일은 화질이 깨짐 -> 화질이 좋은 이미지를 디자이너분께 요청하여 새로운 파일을 적용함

--- a/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
@@ -10,6 +10,7 @@
     android:background="@color/Main_500"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
+    android:clipChildren="false"
     android:animateLayoutChanges="true"
     tools:context=".ui.Tutorial.TutorialActivity">
 
@@ -65,14 +66,22 @@
         android:layout_weight="3">
 
         <ImageView
-            android:layout_width="267dp"
+            android:layout_width="253dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tutorial_circle_img"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"/>
+
+        <ImageView
+            android:layout_width="233dp"
             android:layout_height="wrap_content"
             android:src="@drawable/tutorial_box_img"
-            android:layout_gravity="center"/>
+            android:scaleType="fitEnd"
+            android:layout_gravity="center|bottom"/>
 
         <ImageView
             android:id="@+id/iv_question_mark"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_question_mark_50"
             android:translationY="0dp"
