--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -186,6 +186,7 @@
                 android:paddingEnd="16dp">
 
                 <TextView
+                    android:id="@+id/tv_home_stuff_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="챙겨야 할 것"
@@ -199,6 +200,7 @@
                     android:id="@+id/iv_home_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:src="@drawable/ic_edit_24"
                     app:tint="#D9D9D9"
                     android:gravity="end"
@@ -235,6 +237,17 @@
                     android:textAlignment="center"
                     android:layout_marginBottom="36dp"/>
             </LinearLayout>
+
+            <!-- 챙겨야 할 것이 없을 때 보이는 뷰 -->
+            <TextView
+                android:id="@+id/tv_home_stuff_default"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="49dp"
+                android:text="일정 추가 후 소지품이 추가돼요"
+                style="@style/Body2"
+                android:textColor="@color/Gray_400" />
 
             <!-- 챙겨야 할 것 -->
             <androidx.recyclerview.widget.RecyclerView
