--- a/Oops-Android/app/src/main/res/values/colors.xml
+++ b/Oops-Android/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="White">#FFFFFF</color>
     <!-- Main color -->
     <color name="Main_500">#5F77E1</color>
-    <color name="Main_400">#99A8EC</color>
+    <color name="Main_400">#7F92E7</color>
     <color name="Main_200">#BFC9F3</color>
     <color name="Main_100">#DFE4F9</color>
     <color name="Main_50">#F7F8FD</color>
