Feat: 튜토리얼4 화면 UI 구현
- gif 이미지 적용

--- a/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
@@ -103,7 +103,7 @@
             style="@style/WideButtonDisableStyle"
             android:text="@string/btn_wonder"
             android:textColor="@color/Main_500"
-            android:backgroundTint="@color/White"/>
+            android:backgroundTint="@color/Sub_Bg"/>
 
         <Button
             android:id="@+id/btn_tutorial_start"
