Feat: 버튼 색상 변경 애니메이션 적용
- 사용자가 이벤트 조건을 만족하는 활동을 했다면, 버튼의 색상을 전환할 때 애니메이션을 적용하여 부드러운 색상 전환이 되도록 함

--- a/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
@@ -121,15 +121,22 @@
     </LinearLayout>
 
     <!-- 다음 버튼 -->
-    <Button
-        android:id="@+id/btn_sign_up_1_next"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_sign_up_1_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/WideButtonEnableStyle"
-        android:text="@string/btn_next"
         android:layout_marginBottom="40dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="146dp"
+        app:cardElevation="0dp">
+        <Button
+            android:id="@+id/btn_sign_up_1_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/WideButtonEnableStyle"
+            android:text="@string/btn_next" />
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
