--- a/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_tutorial.xml
@@ -96,22 +96,34 @@
         android:gravity="center"
         android:layout_weight="2"
         android:paddingBottom="12dp">
-        <Button
-            android:id="@+id/btn_tutorial_wonder"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/WideButtonDisableStyle"
-            android:text="@string/btn_wonder"
-            android:textColor="@color/Main_500"
-            android:backgroundTint="@color/Sub_Bg"/>
+            app:cardCornerRadius="146dp"
+            app:cardElevation="0dp">
+            <Button
+                android:id="@+id/btn_tutorial_wonder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/WideButtonDisableStyle"
+                android:text="@string/btn_wonder"
+                android:textColor="@color/Main_500"
+                android:backgroundTint="@color/Sub_Bg"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/btn_tutorial_start"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/WideButtonEnableStyle"
-            android:text="@string/btn_start"
-            android:backgroundTint="@color/Main_400"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="146dp"
+            app:cardElevation="0dp">
+            <Button
+                android:id="@+id/btn_tutorial_start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/WideButtonEnableStyle"
+                android:text="@string/btn_start"
+                android:backgroundTint="@color/Main_400"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </LinearLayout>
