--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -492,45 +492,64 @@
             </GridLayout>
 
             <!-- 등록하기 버튼 -->
-            <Button
-                android:id="@+id/btn_todo_create"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                style="@style/WideButtonDisableStyle"
-                android:backgroundTint="@color/Gray_100"
-                android:text="@string/button_create"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="40dp"/>
+                android:layout_marginBottom="40dp"
+                app:cardCornerRadius="146dp"
+                app:cardElevation="0dp">
+                <Button
+                    android:id="@+id/btn_todo_create"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/WideButtonDisableStyle"
+                    android:backgroundTint="@color/Gray_100"
+                    android:text="@string/button_create"/>
+            </androidx.cardview.widget.CardView>
 
             <!-- 수정 화면에 나타 날 버튼 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:visibility="gone"
+                android:orientation="vertical"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="40dp">
+
                 <!-- 삭제하기 버튼 -->
-                <Button
-                    android:id="@+id/btn_todo_delete"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/WideButtonDisableStyle"
-                    android:backgroundTint="@color/Gray_100"
-                    android:text="@string/button_delete" />
+                    app:cardCornerRadius="146dp"
+                    app:cardElevation="0dp">
+                    <Button
+                        android:id="@+id/btn_todo_delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/WideButtonDisableStyle"
+                        android:backgroundTint="@color/Gray_100"
+                        android:text="@string/button_delete" />
+                </androidx.cardview.widget.CardView>
 
                 <!-- 수정하기 버튼 -->
-                <Button
-                    android:id="@+id/btn_todo_edit"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/WideButtonDisableStyle"
-                    android:backgroundTint="@color/Gray_100"
-                    android:text="@string/button_edit"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="16dp"
+                    app:cardCornerRadius="146dp"
+                    app:cardElevation="0dp">
+                    <Button
+                        android:id="@+id/btn_todo_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/WideButtonDisableStyle"
+                        android:backgroundTint="@color/Gray_100"
+                        android:text="@string/button_edit"/>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
