--- a/Oops-Android/app/src/main/res/layout/toolbar_sub.xml
+++ b/Oops-Android/app/src/main/res/layout/toolbar_sub.xml
@@ -45,6 +45,7 @@
             android:id="@+id/iv_sub_toolbar_right"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:visibility="gone"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_delete_24"
             app:layout_constraintTop_toTopOf="parent"
