Feat: 튜토리얼5 화면 UI 구현

--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -146,9 +146,10 @@
                 <!-- 인벤토리내 소지품 추가 버튼 -->
                 <ImageView
                     android:id="@+id/iv_inventory_stuff_create"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add_50"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_add_todo_24"
+                    app:tint="@color/Main_300"
                     android:layout_marginBottom="104dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
