--- a/Oops-Android/app/src/main/res/layout/activity_tutorial4.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_tutorial4.xml
@@ -55,6 +55,7 @@
             app:cardCornerRadius="146dp"
             app:cardElevation="0dp">
             <Button
+                android:id="@+id/btn_tutorial_4_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/WideButtonEnableStyle"
