--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -26,13 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginStart="16dp">
+        android:layout_marginStart="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_weight="2">
+            android:layout_weight="1">
 
             <!-- ALL 버튼 -->
             <Button
@@ -90,7 +90,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="1.5"
+            android:layout_marginStart="11dp"
             android:clipToPadding="false">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -98,7 +99,6 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/inventory_stuff_box_background"
                 android:backgroundTint="@color/White"
-                android:layout_marginStart="15dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
@@ -108,6 +108,7 @@
                     android:id="@+id/tv_inventory_stuff_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:text="0/0"
                     android:textColor="#ABABAB"
                     android:textSize="14sp"
@@ -122,6 +123,7 @@
                     android:id="@+id/tv_inventory_stuff_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:src="@drawable/ic_edit_24"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="16dp"
@@ -161,10 +163,10 @@
                     android:layout_height="wrap_content"
                     android:text="@string/inventory_info"
                     android:fontFamily="@font/pretendard_bold"
-                    android:textSize="10sp"
+                    android:textSize="14dp"
                     android:textColor="@color/Main_200"
                     android:gravity="center"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/iv_inventory_stuff_create"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
