Chore: 자잘한 디자인 수정(인벤토리, 콕콕 찌르기)

--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -76,9 +76,9 @@
                 android:paddingBottom="8dp"
                 android:layout_marginTop="30dp"
                 android:text="@string/inventory_create"
-                android:textSize="20sp"
+                android:textAllCaps="false"
+                style="@style/H3"
                 android:textColor="#80FFFFFF"
-                android:fontFamily="@font/pretendard_bold"
                 android:drawableStart="@drawable/ic_inventory_add_24"
                 android:background="@drawable/inventory_category_background"
                 android:backgroundTint="#80FFFFFF"
