--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -340,6 +340,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="100dp"
             android:scaleType="centerCrop"
+            android:layout_marginStart="42dp"
             app:cardElevation="@null"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -401,7 +402,8 @@
             app:cardCornerRadius="100dp"
             android:scaleType="centerCrop"
             app:cardElevation="@null"
-            android:layout_marginTop="102dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginBottom="14dp"
             app:layout_constraintTop_toBottomOf="@id/cv_sting_friend5_2"
             app:layout_constraintStart_toEndOf="@id/cv_sting_friend5_3"
             app:layout_constraintEnd_toEndOf="parent"
