--- a/Oops-Android/app/src/main/res/values-night/themes.xml
+++ b/Oops-Android/app/src/main/res/values-night/themes.xml
@@ -11,6 +11,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/White</item>
         <item name="android:windowLightStatusBar">true</item>
+        <!-- 앱 전체에 바텀 시트 테마 적용 -->
+        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
+        <!-- 앱 전체에 커서 색이 회색인 EditText 스타일 적용 -->
+        <item name="colorAccent">@color/Gray_400</item>
+        <item name="android:textColorHighlight">@color/Gray_300</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color_main</item>
     </style>
     <!-- 스플래시 스크린 -->
     <style name="SplashTheme" parent="Theme.SplashScreen">
@@ -20,11 +26,109 @@
         <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="s">@color/transparent</item>
         <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">150</item>
         <!-- 안드로이드12 미만 -->
-        <item name="android:statusBarColor">@color/transparent</item>
         <item name="windowSplashScreenBackground">@color/Main_500</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/splash</item>
         <item name="windowSplashScreenIconBackgroundColor">@color/transparent</item>
         <!-- splash 화면 이후의 화면 테마 -->
         <item name="postSplashScreenTheme">@style/Theme.OopsAndroid</item>
+        <!-- Status bar and Nav bar 기본 설정 -->
+        <item name="android:statusBarColor">@color/White</item>
+        <item name="android:navigationBarColor">@color/White</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+    <!-- 월간 캘린더 텍스트 스타일 -->
+    <style name="CalendarViewCustom">
+        <item name="android:textColor">@drawable/selector_monthly_calendar_event_text</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- 요일(일주일) -->
+    <style name="WeekTextStyle">
+        <item name="android:textColor">@color/Black_70</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- 요일(월간) -->
+    <style name="WeekTextStyle2">
+        <item name="android:textColor">@color/Black_70</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+    </style>
+    <!-- 날짜 -->
+    <style name="DateTextStyle">
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- Enable Wide 버튼 스타일 -->
+    <style name="WideButtonEnableStyle">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:background">@color/Main_500</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+    <!-- Disable Wide 버튼 스타일 -->
+    <style name="WideButtonDisableStyle">
+        <item name="android:textColor">@color/Gray_400</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:background">@color/Gray_200</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+    <!-- Enable 팝업 버튼 스타일 -->
+    <style name="PopUpButtonEnableStyle">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/popup_btn_bg</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+    <!-- 취소 팝업 버튼 스타일 -->
+    <style name="PopUpButtonCancelStyle">
+        <item name="android:textColor">@color/Gray_500</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/popup_btn_bg</item>
+        <item name="android:backgroundTint">@color/Gray_50</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+    <!-- Disable 팝업 버튼 스타일 -->
+    <style name="PopUpButtonDisableStyle">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/popup_btn_bg</item>
+        <item name="android:backgroundTint">@color/Red_Dark</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+    <!-- 바텀 시트 스타일 -->
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/top_radius_30</item>
+    </style>
+    <style name="BottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+    <!-- Time Picker 스타일 -->
+    <style name="TimePickerTheme" parent="android:Widget.Material.Light.TimePicker">
+        <item name="android:timePickerMode">spinner</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+        <item name="android:textColorPrimary">@color/Gray_900</item>
+        <item name="colorControlNormal">@color/transparent</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
