--- a/Oops-Android/app/src/main/res/layout/item_inventory_category_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_inventory_category_rv.xml
@@ -3,24 +3,23 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="30dp">
 
     <!-- 각 카테고리 버튼 -->
     <Button
         android:id="@+id/btn_inventory_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="6dp"
+        android:gravity="center"
+        android:paddingTop="8dp"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="6dp"
-        android:layout_marginTop="30dp"
-        android:text="카테고리 이름"
-        android:textSize="20sp"
+        android:paddingEnd="6dp"
+        android:paddingBottom="8dp"
+        style="@style/H3"
+        android:text="말랑강아지"
         android:textColor="#B3FFFFFF"
-        android:fontFamily="@font/pretendard_bold"
-        android:drawableStart="@drawable/ic_time_20"
-        android:background="@drawable/inventory_category_background"
-        android:backgroundTint="#80FFFFFF">
+        android:drawableStart="@drawable/ic_all_box_inventory_24"
+        android:background="@drawable/inventory_category_background">
     </Button>
 </LinearLayout>
