--- a/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
@@ -4,16 +4,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="22dp"
-    android:layout_marginEnd="15dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="18dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/item_inventory_stuff_box_cv"
-        android:layout_width="86dp"
-        android:layout_height="86dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="18dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="@null">
@@ -21,10 +20,9 @@
         <!-- 물품 사진 -->
         <ImageView
             android:id="@+id/item_inventory_stuff_image_iv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_ex_img"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             android:background="#F3F3F3"/>
     </androidx.cardview.widget.CardView>
 
@@ -33,11 +31,9 @@
         android:id="@+id/item_inventory_stuff_title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="물품 이름"
-        android:textSize="14sp"
+        style="@style/Body2"
         android:textColor="#303030"
         android:maxLines="2"
-        android:fontFamily="@font/pretendard_medium"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="11dp"
         android:gravity="center"/>
 </LinearLayout>
