--- a/Oops-Android/app/src/main/res/values/font_style.xml
+++ b/Oops-Android/app/src/main/res/values/font_style.xml
@@ -57,4 +57,8 @@
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
+    <style name="Popup_content">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
 </resources>
