--- a/Oops-Android/app/src/main/res/drawable/cursor_color_main.xml
+++ b/Oops-Android/app/src/main/res/drawable/cursor_color_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 모든 edittext의 커서 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/Cursor_main"/>
+    <solid android:color="@color/Gray_500"/>
     <size android:width="2dp"/>
 </shape>
