--- a/Oops-Android/app/src/main/res/values/colors.xml
+++ b/Oops-Android/app/src/main/res/values/colors.xml
@@ -31,8 +31,11 @@
     <color name="Black_70">#707070</color>
     <color name="Black_33">#333333</color>
     <color name="Black_87">#878585</color>
+    <color name="Black_2C">#2C2E33</color>
+    <color name="Gray_F5">#F5F5F5</color>
     <color name="Cursor_main">#33BDBDBD</color>
     <color name="Color_EA">#EAECF7</color>
+    <color name="Color_8E">#8E9EEB</color>
     <!-- 투명 색상 -->
     <color name="transparent">#00ff0000</color>
 </resources>
