--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -58,9 +58,21 @@
         android:name="com.example.oops_android.ui.Main.Inventory.CreateInventoryFragment"
         android:label="frm_create_inventory"
         tools:layout="@layout/fragment_create_inventory">
+        <!-- 생성&수정 여부 변수 -->
         <argument
             android:name="inventoryDivision"
             app:argType="string"/>
+
+        <!-- 전체 인벤토리 리스트 -->
+        <argument
+            android:name="inventoryList"
+            app:argType="com.example.oops_android.ui.Main.Inventory.CategoryList"/>
+
+        <!-- 수정할 아이템 -->
+        <argument
+            android:name="inventoryItem"
+            app:argType="com.example.oops_android.ui.Main.Inventory.CategoryItemUI"
+            app:nullable="true"/>
     </fragment>
 
     <!-- 콕콕 찌르기 -->
